// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField classic theme adds custom margin top 1`] = `
.c2 + .c0 {
  margin-top: 16px;
}

.c1 + .c0 {
  margin-top: 10px;
}

<div
  className="c0 c1"
/>
`;

exports[`FormField classic theme when inline renders the FieldHelp component below the childen 1`] = `
.c1 + .c0 {
  margin-top: 16px;
}

.c2 + .c0 {
  margin-top: 10px;
}

<div
  className="c0 c1"
/>
`;

exports[`FormField default renders children with styling 1`] = `
.c1 + .c0 {
  margin-top: 16px;
}

.c2 {
  display: block;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <input />
  </div>
</div>
`;

exports[`FormField with a label renders the label component above the childen 1`] = `
<styled.div
  inline={true}
>
  <Memo(Label)
    align="left"
    help="Help me!"
    inline={true}
    inputSize="small"
    width={20}
  >
    Name
  </Memo(Label)>
  <input />
</styled.div>
`;

exports[`FormField with fieldHelp and fieldHelpInline=true renders the FieldHelp component below the childen 1`] = `
<styled.div
  inline={true}
>
  <FieldHelp
    labelInline={true}
    labelWidth={20}
  >
    Help me!
  </FieldHelp>
  <input />
</styled.div>
`;

exports[`FormField with fieldHelp default renders the FieldHelp component below the childen 1`] = `
Array [
  <styled.div
    inline={true}
  >
    <input />
  </styled.div>,
  <FieldHelp
    labelInline={true}
    labelWidth={20}
  >
    Help me!
  </FieldHelp>,
]
`;
